# LiteRT-LM

./: .bazelrc  AUDIT_UPDATED.md  BUILD  CLAUDE.md  CMakeLists.txt  PATCH.tensorflow  README.md  WORKSPACE
.github/workflows/: ci-build-cmake.yml  ci-build.yml
android/java/com/google/ai/edge/litertlm/: BUILD  Conversation.kt  Message.kt  Tool.kt
c/: BUILD  CMakeLists.txt  engine.cc
cmake/modules/: collect_dependencies.cmake  external_project.cmake  fetch_content.cmake  local_aggregate.cmake  macros.cmake  utils.cmake
docs/: README.md
docs/api/cpp/: README.md
docs/api/kotlin/: getting_started.md
docs/getting-started/: build-and-run.md  cmake.md
kotlin/: README.md
kotlin/java/com/google/ai/edge/litertlm/: Config.kt  Conversation.kt  Engine.kt  ExperimentalFlags.kt  LiteRtLmJni.kt  Message.kt  Session.kt
kotlin/java/com/google/ai/edge/litertlm/example/: BUILD  Main.kt  ToolMain.kt
kotlin/java/com/google/ai/edge/litertlm/jni/: BUILD  image_preprocessing.cc  image_preprocessing.h  image_preprocessing_test.cc  litertlm.cc
prebuilt/ios_arm64/: libGemmaModelConstraintProvider.dylib
prebuilt/ios_sim_arm64/: libGemmaModelConstraintProvider.dylib
prebuilt/linux_x86_64/: lit
prebuilt/macos_arm64/: libGemmaModelConstraintProvider.dylib  libLiteRt.dylib  libLiteRtMetalAccelerator.dylib  libLiteRtRuntimeCApi.dylib  libLiteRtTopKWebGpuSampler.dylib  libLiteRtWebGpuAccelerator.dylib  lit
runtime/components/: BUILD  lora_manager.cc  lora_manager.h  lora_manager_test.cc  model_resources.h  sentencepiece_tokenizer.cc  sentencepiece_tokenizer.h  sentencepiece_tokenizer_test.cc  tokenizer.h  top_p_cpu_sampler.cc  top_p_cpu_sampler.h  top_p_cpu_sampler_test.cc
runtime/components/constrained_decoding/: BUILD  CMakeLists.txt  constrained_decoder.h  constraint_provider_factory_no_llg.cc
runtime/components/embedding_lookup/: BUILD  embedding_lookup_manager.cc  embedding_lookup_text.cc  embedding_lookup_text.h
runtime/components/preprocessor/: BUILD  audio_preprocessor_miniaudio.cc  audio_preprocessor_miniaudio.h  audio_preprocessor_miniaudio_test.cc  image_preprocessor.h  stb_image_preprocessor.cc  stb_image_preprocessor_test.cc
runtime/components/tool_use/: BUILD  CMakeLists.txt  parser_common.cc  parser_common.h  python_parser_utils_test.cc
runtime/components/tool_use/antlr/: AntlrFcLexer.g4  CMakeLists.txt
runtime/components/tool_use/rust/: fc_parser.rs
runtime/conversation/: BUILD  CMakeLists.txt  conversation.cc  conversation.h  conversation_test.cc
runtime/conversation/model_data_processor/: BUILD  CMakeLists.txt  function_gemma_data_processor.cc  function_gemma_data_processor.h  gemma3_data_processor.cc  gemma3_data_processor.h  gemma3_data_processor_test.cc  gemma4_data_processor.cc  gemma4_data_processor.h  gemma4_data_processor_config.h  model_data_processor.h  model_data_processor_factory.cc  qwen3_data_processor.cc
runtime/core/: BUILD  engine_advanced_impl.cc  engine_advanced_impl_test.cc  engine_advanced_legacy_impl.cc  engine_impl.cc  engine_impl_test.cc  engine_legacy_impl.cc  pipeline.cc  pipeline_test.cc  session_advanced.cc  session_advanced.h  session_advanced_test.cc  session_basic.cc  session_basic.h  session_basic_test.cc  session_factory_test.cc  session_utils.cc  tasks.cc  tasks.h  tasks_test.cc
runtime/engine/: BUILD  engine.h  engine_factory.h  engine_settings.cc  engine_settings.h  io_types.cc  io_types.h  io_types_test.cc  litert_lm_advanced_main.cc  litert_lm_lib.cc  litert_lm_lib.h  litert_lm_main.cc  shared_flags.cc  shared_flags.h
runtime/executor/: BUILD  CMakeLists.txt  audio_executor_base.h  audio_executor_settings.cc  audio_executor_settings.h  audio_executor_settings_test.cc  audio_executor_utils.cc  audio_litert_compiled_model_executor.cc  audio_litert_compiled_model_executor.h  audio_litert_compiled_model_executor_test.cc  litert_compiled_model_executor_utils.cc  litert_compiled_model_executor_utils.h  litert_compiled_model_executor_utils_test.cc  llm_executor_base.h  llm_executor_io_types.h  llm_executor_settings.cc  llm_executor_settings.h  llm_executor_settings_test.cc  llm_litert_compiled_model_executor.cc  llm_litert_compiled_model_executor.h  llm_litert_compiled_model_executor_factory.cc  llm_litert_compiled_model_executor_factory.h  llm_litert_compiled_model_executor_test.cc  llm_litert_npu_compiled_model_executor.cc  llm_litert_npu_compiled_model_executor.h  llm_processed_context.h  magic_number_configs_helper.cc  magic_number_configs_helper_test.cc  vision_executor_base.h  vision_executor_settings.h  vision_executor_utils.cc  vision_litert_compiled_model_executor.cc  vision_litert_compiled_model_executor.h
runtime/framework/: execution_queue_test.cc
runtime/framework/resource_management/: BUILD  execution_manager.cc  execution_manager.h  execution_manager_test.cc  resource_manager.cc  resource_manager.h
runtime/framework/resource_management/context_handler/: BUILD  context_handler.cc  context_handler.h  context_handler_test.cc
runtime/framework/resource_management/processed_context/: BUILD  litert_processed_context.h
runtime/framework/resource_management/utils/: BUILD
runtime/util/: BUILD  CMakeLists.txt  convert_tensor_buffer.h  lora_util.cc  lora_util.h  lora_util_test.cc  memory_mapped_file_posix.cc  model_type_utils.cc
schema/cc/: litertlm_export_main.cc  litertlm_writer.cc
schema/core/: CMakeLists.txt  litertlm_read.cc  litertlm_read.h  litertlm_read_test.cc
schema/py/: BUILD  litertlm_builder.py  litertlm_builder_cli.py  litertlm_peek_main.py
